--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "sass-mq": "^3.3.2",
     "vue": "^2.1.0",
     "vue-carousel": "^0.6.1"
   },
